Fix modal z-index

--- a/source/assets/stylesheets/main.css
+++ b/source/assets/stylesheets/main.css
@@ -963,7 +963,7 @@ ol, ul, li {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2; }
+  z-index: 999; }
   .ch-dialog-container {
     position: absolute;
     top: 0;
@@ -1105,7 +1105,7 @@ ol, ul, li {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2; }
+  z-index: 999; }
   .ch-search-content {
     margin-left: 240px;
     width: calc(100% - 240px);
