--- a/source/assets/stylesheets/scss/components/_dialog.scss
+++ b/source/assets/stylesheets/scss/components/_dialog.scss
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2;
+  z-index: 999;
 
   &-container {
     position: absolute;
